log
Thu May 12 16:59:36 -04 2022: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
097ebfb
Thu May 12 17:08:02 -04 2022: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  0|5
total_score: 0/70
2ab28bd
Thu May 12 17:09:18 -04 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
7464c81
Thu May 12 17:11:41 -04 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
4cb671d
Thu May 12 17:14:01 -04 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
7a17535
Thu May 12 17:16:45 -04 2022: 
 sudoku.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
b7c3495
Thu May 12 17:33:53 -04 2022: 
 sudoku.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:5:
./sudoku.c:56:45: error: equality comparison result unused [-Werror,-Wunused-comparison]
      if (arreglo[cont] == 0) arreglo[cont] == 1;
                              ~~~~~~~~~~~~~~^~~~
./sudoku.c:56:45: note: use '=' to turn this equality comparison into an assignment
      if (arreglo[cont] == 0) arreglo[cont] == 1;
                                            ^~
                                            =
1 error generated.
Compilation failed
f7387fe
Thu May 12 17:34:06 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
44c88fb
Thu May 12 17:34:31 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
8f2dc1d
Thu May 12 17:39:01 -04 2022: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
88724de
Thu May 12 17:41:19 -04 2022: 
 sudoku.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
4092345
Thu May 12 17:41:50 -04 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
9958f66
Thu May 12 17:45:00 -04 2022: 
 sudoku.c | 17 ++++++-----------
 1 file changed, 6 insertions(+), 11 deletions(-)
 tests:  2|4
total_score: 15/70
eaa0d3f
Thu May 12 17:45:34 -04 2022: 
 sudoku.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
76ed94b
Thu May 12 17:45:53 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
fe9ec0c
Thu May 12 17:49:16 -04 2022: 
 sudoku.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
c8d4a0a
Thu May 12 17:49:37 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
4b0d6cc
Thu May 12 17:53:01 -04 2022: 
 sudoku.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  2|4
total_score: 15/70
98946d7
Thu May 12 18:57:37 -04 2022: 
 sudoku.c | 21 ++++++++++++++++-----
 1 file changed, 16 insertions(+), 5 deletions(-)
In file included from test.c:5:
./sudoku.c:49:19: error: unused variable 'numero' [-Werror,-Wunused-variable]
  int i, j, k, p, numero;
                  ^
1 error generated.
Compilation failed
1e894e3
Thu May 12 18:57:47 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
6403802
Thu May 12 19:04:20 -04 2022: 
 sudoku.c | 27 ++++++++++++++++++++++-----
 1 file changed, 22 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
c3b7f90
Thu May 12 19:09:25 -04 2022: 
 sudoku.c | 21 +++++++--------------
 1 file changed, 7 insertions(+), 14 deletions(-)
 tests:  2|4
total_score: 15/70
7fbe11a
Thu May 12 19:10:33 -04 2022: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  2|4
total_score: 15/70
1183489
Thu May 12 19:14:38 -04 2022: 
 sudoku.c | 19 ++++++-------------
 1 file changed, 6 insertions(+), 13 deletions(-)
 tests:  2|4
total_score: 15/70
560b948
Thu May 12 19:19:29 -04 2022: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
d866996
Thu May 12 19:19:52 -04 2022: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
875fd1f
